--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,26 @@
 asgiref==3.10.0
+attrs==25.4.0
 Django==5.2.8
+django-cors-headers==4.6.0
 django-filter==25.2
 django-unfold==0.69.0
 djangorestframework==3.16.1
-django-cors-headers==4.6.0
-drf-spectacular==0.27.2
 djangorestframework-simplejwt==5.3.1
+drf-spectacular==0.27.2
 future==1.0.0
-pyzk==0.9
-sqlparse==0.5.3
-qrcode==8.0
+gunicorn==23.0.0
+inflection==0.5.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+packaging==25.0
+pillow==11.0.0
+PyJWT==2.10.1
 python-barcode==0.15.1
-Pillow==11.0.0
+PyYAML==6.0.3
+pyzk==0.9
+qrcode==8.0
+referencing==0.37.0
+rpds-py==0.29.0
+sqlparse==0.5.3
+typing_extensions==4.15.0
+uritemplate==4.2.0
