--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,6 @@ rpds-py==0.29.0
 sqlparse==0.5.3
 typing_extensions==4.15.0
 uritemplate==4.2.0
+django-extensions==3.2.3
+werkzeug==3.0.1
+pyOpenSSL==24.0.0
